@@ -17,6 +17,7 @@ Other features
  * Removed leftover Python 2.x compatibility code (Sergey Fedoseev)
  * Combine flake8 configurations (Sergey Fedoseev)
  * Improved diffing behavior for text fields (Aliosha Padovani)
+ * Improve contrast of disabled inputs (Nick Smith)
 
 
 Bug fixes
